--- a/autocorrect_module_src/Makefile
+++ b/autocorrect_module_src/Makefile
@@ -20,7 +20,7 @@ include $(NACL_SDK_ROOT)/tools/common.mk
 
 LIBS = ppapi_cpp ppapi pthread
 
-CFLAGS = -std=gnu++11 -Wall -Wno-long-long -Wswitch-enum -pedantic -Werror
+CFLAGS = -stdlib=libc++ -std=gnu++11 -Wall -Wno-long-long -Wswitch-enum -pedantic -Werror
 SOURCES := $(wildcard src/browser_message_handling/*.cpp)
 SOURCES += $(wildcard src/suggestion_generation/*.cpp)
 #SOURCES := src/browser_message_handling/autocorrect_module.cpp
